[package]
name = "kms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix
actix-cors = "0.7.0"
actix-web = "4.8.0"
actix-web-httpauth = "0.8.2"

#serde
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }

#logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

chrono = "0.4.38"
dotenv = "0.15.0"
envy = "0.4.2"
lazy_static = "1.5.0"
rand = "0.8.5"
reqwest = "0.12.5"
sha3 = "0.10.8"
thiserror = "1.0.62"
tokio = { version = "1.38.0", features = ["macros"] }
uuid = { version = "1.10.0", features = ["v4"] }

# db
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
migration = { path = "./migration" }
anyhow = "1.0.86"
bytes = "1.6.1"
actix-http = "3.8.0"
vaultrs = "0.7.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"
base64 = "0.22.1"
hex = "0.4.3"

alloy = { version = "0.1.3", features = ["signer-local"] }
